--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -1,9 +1,6 @@
 name: Pipeline_OnPush
 run-name: ${{github.actor}} is pushing files
-on:
-  push:
-    paths:
-      - ~/capstone-project/hello-world
+on: push
 jobs:
     Check-Versions:
                   name: Job for WSL Ubuntu
