--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -6,7 +6,7 @@ jobs:
                   name: Job for WSL Ubuntu
                   runs-on: ubuntu-latest
                   env:
-                    working-directory: .capstone-project/hello-world/
+                    working-directory: ./capstone-project/
                   steps:
                   - name: StepOne, Repository Check
                     uses: actions/checkout@v3
@@ -14,6 +14,7 @@ jobs:
                     uses: actions/setup-node@v3
                     with:
                       node-version: 16.13.1
+                      cache-dependency-path: ./capstone-project/hello-world/package-lock.json
                   - name: Installing Dependencies
                     run: npm install
                     working-directory: ${{env.working-directory}}
@@ -24,7 +25,7 @@ jobs:
                     name: Job for Windows
                     runs-on: windows-latest
                     env:
-                        working-directory: .capstone-project/hello-world/
+                        working-directory: ./capstone-project/
                     steps:
                     - name: StepOne, Repository Check
                       uses: actions/checkout@v3
@@ -32,6 +33,7 @@ jobs:
                       uses: actions/setup-node@v3
                       with:
                         node-version: 16.13.1
+                        cache-dependency-path: ./capstone-project/hello-world/package-lock.json
                     - name: Installing Dependencies
                       run: npm install
                       working-directory: ${{env.working-directory}}
