--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -6,7 +6,7 @@ jobs:
                   name: Job for WSL Ubuntu
                   runs-on: ubuntu-latest
                   env:
-                    working-directory: ./capstone-project/
+                    working-directory: capstone-project
                   steps:
                   - name: StepOne, Repository Check
                     uses: actions/checkout@v3
@@ -25,7 +25,7 @@ jobs:
                     name: Job for Windows
                     runs-on: windows-latest
                     env:
-                        working-directory: ./capstone-project/
+                        working-directory: capstone-project
                     steps:
                     - name: StepOne, Repository Check
                       uses: actions/checkout@v3
