--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -1,8 +1,8 @@
 name: Pipeline_OnPush
 run-name: ${{github.actor}} is pushing files
-on: push
+on: [push, pull_request]
 jobs:
-    Check-Versions:
+    Build_OnUbuntu:
                   name: Job for WSL Ubuntu
                   runs-on: ubuntu-latest
                   env:
@@ -21,7 +21,10 @@ jobs:
                   - name: Check Version of NPM
                     run: npm version
                     working-directory: ${{env.working-directory}}
-    WindowsVersions:
+                  - name: Making Docker Image
+                    run: docker build -t capstone .
+                    working-directory: ${{env.working-directory}}
+    Build_OnWindows:
                     name: Job for Windows
                     runs-on: windows-latest
                     env:
@@ -39,3 +42,28 @@ jobs:
                     - name: Check Version of NPM
                       run: npm version
                       working-directory: ${{env.working-directory}}
+                    - name: Making Docker Image
+                      run: docker build -t capstone .
+                      working-directory: ${{env.working-directory}}
+    Deploying_Container_OnUbuntu:
+                                name: Making Container
+                                runs-on: ubuntu-latest
+                                needs: [Build_OnUbuntu]
+                                steps:
+                                - uses: actions/checkout@v3
+                                - name: Step One, Making container
+                                  run: docker run -d -p 3000:3000 capstone
+                                - name: Step Two, Check status of running container
+                                  run: docker ps
+    Deploying_Container_OnWindows:
+                                name: Making Container
+                                runs-on: windows-latest
+                                needs: [Build_OnWindows]
+                                steps:
+                                - uses: actions/checkout@v3
+                                - name: Step One, Making container
+                                  run: docker run -d -p 3000:3000 capstone
+                                - name: Step Two, Check status of running container
+                                  run: docker ps    
+
+
