--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -2,12 +2,13 @@ name: Pipeline_OnPush
 run-name: ${{github.actor}} is pushing files
 on: [push, pull_request]
 jobs:
-default:
-  run:
-    working-directory: ./capstone_project/hello-world/
     Build_OnUbuntu:
                   name: Job for WSL Ubuntu
                   runs-on: ubuntu-latest
+                  default:
+                    run:
+                      working-directory: ./capstone_project/hello-world/
+                      shell: bash
                   steps:
                   - name: StepOne, Repository Check
                     uses: actions/checkout@v3
@@ -25,6 +26,10 @@ default:
     Build_OnWindows:
                     name: Job for Windows
                     runs-on: windows-latest
+                    default:
+                    run:
+                      working-directory: ./capstone_project/hello-world/
+                      shell: bash
                     steps:
                     - name: StepOne, Repository Check
                       uses: actions/checkout@v3
@@ -39,24 +44,36 @@ default:
                     - name: Testing Build
                       run: npm test
     Deploying_Container_OnUbuntu:
-                                name: Making Container
+                                name: Making Image
                                 runs-on: ubuntu-latest
+                                default:
+                                  run:
+                                    working-directory: ./capstone_project/hello-world/
+                                    shell: bash
                                 needs: [Build_OnUbuntu]
                                 steps:
                                 - uses: actions/checkout@v3
-                                - name: StepOne:Making Docker Image
+                                - name: Step One:Making Docker Image
                                   run: docker build -t capstone_ubuntu .
                                 - name: SetpTwo:Checking Image
                                   run: docker images
+                                - name: Step Three:Making Container
+                                  run: docker run -d -p 3000:3000 capstone_ubuntu
     Deploying_Container_OnWindows:
-                                name: Making Container
+                                name: Making Image
                                 runs-on: windows-latest
+                                default:
+                                  run:
+                                    working-directory: ./capstone_project/hello-world/
+                                    shell: bash
                                 needs: [Build_OnWindows]
                                 steps:
                                 - uses: actions/checkout@v3
                                 - name: StepOne:Making Docker Image
                                   run: docker build -t capstone_windowsArch .
-                                - name: SetpTwo:Checking Image
+                                - name: Step Two:Checking Image
                                   run: docker images
+                                - name: Step Three:Making Container
+                                  run: docker run -d -p 3000:3000 capstone_windowsArch
 
 
