--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -41,14 +41,14 @@ jobs:
                       run: npm install
                     - name: Check Version of NPM
                       run: npm version
-    Deploying_Container_OnUbuntu:
+    Deploying_Container:
                                 name: Making Image
                                 runs-on: ubuntu-latest
                                 defaults:
                                   run:
                                     working-directory: ./capstone_project/hello-world/
                                     shell: bash
-                                needs: [Build_OnUbuntu]
+                                needs: [Build_OnUbuntu, Build_OnWindows]
                                 steps:
                                 - uses: actions/checkout@v3
                                 - name: Step One:Making Docker Image
@@ -57,29 +57,6 @@ jobs:
                                   run: docker images
                                 - name: Step Three:Making Container
                                   run: docker run -d -p 3000:3000 capstone_ubuntu
-                                - name: Running container
-                                  run: docker ps
-    Deploying_Container_OnWindows:
-                                name: Making Image
-                                runs-on: windows-latest
-                                defaults:
-                                  run:
-                                    working-directory: ./capstone_project/hello-world/
-                                needs: [Build_OnWindows]
-                                steps:
-                                - uses: actions/checkout@v3
-                                - name: Setup project
-                                  run: |
-                                    wsl --install -d Ubuntu
-                                    wsl -d ubuntu
-                                    ant
-                                    ant
-                                - name: StepOne:Making Docker Image
-                                  run: docker build -t capstone_windowsarch .
-                                - name: Step Two:Checking Image
-                                  run: docker images
-                                - name: Step Three:Making Container
-                                  run: docker run -d -p 3000:3000 capstone_windowsArch
                                 - name: Running container
                                   run: docker ps
 
