--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -1,23 +1,23 @@
-name: 'Hello World'
-description: 'Greet someone and record the time'
-inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
-    required: true
-    default: 'World'
-outputs:
-  time: # id of output
-    description: 'The time we greeted you'
-runs:
-  using: 'docker'
-  image: 'Dockerfile'
-  args:
-    - ${{ inputs.who-to-greet }}
-
 name: Pipeline_OnPush
 run-name: ${{github.actor}} is pushing files
 on: [push, pull_request]
 jobs:
+    ContainerActions:
+                    name: 'Hello World'
+                    description: 'Greet someone and record the time'
+                    inputs:
+                      who-to-greet: 
+                        description: 'Who to greet'
+                        required: true
+                        default: 'World'
+                    outputs:
+                      time: 
+                        description: 'The time we greeted you'
+                    runs:
+                      using: 'docker'
+                      image: 'Dockerfile'
+                      args:
+                        - ${{ inputs.who-to-greet }}
     Build_OnUbuntu:
                   name: Job for WSL Ubuntu
                   runs-on: ubuntu-latest
